log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 07:11:50 PM UTC: 
 arraylist.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:40: error: expected expression before ‘void’
   15 |   local.data = calloc(local, 2*sizeof(*void);
      |                                        ^~~~
arraylist.c:15:45: error: expected ‘)’ before ‘;’ token
   15 |   local.data = calloc(local, 2*sizeof(*void);
      |                      ~                      ^
      |                                             )
arraylist.c:15:23: error: incompatible type for argument 1 of ‘calloc’
   15 |   local.data = calloc(local, 2*sizeof(*void);
      |                       ^~~~~
      |                       |
      |                       ArrayList {aka struct ArrayList}
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:29: note: expected ‘size_t’ {aka ‘long unsigned int’} but argument is of type ‘ArrayList’ {aka ‘struct ArrayList’}
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |                      ~~~~~~~^~~~~~~
In file included from test.c:5:
arraylist.c:18:18: error: expected ‘;’ before ‘}’ token
   18 |     return local;
      |                  ^
      |                  ;
   19 | }
      | ~                 
arraylist.c:19:1: error: control reaches end of non-void function [-Werror=return-type]
   19 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
cff9b01
Thu 30 Mar 2023 07:12:04 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:40: error: expected expression before ‘void’
   15 |   local.data = calloc(local, 2*sizeof(*void));
      |                                        ^~~~
arraylist.c:15:23: error: incompatible type for argument 1 of ‘calloc’
   15 |   local.data = calloc(local, 2*sizeof(*void));
      |                       ^~~~~
      |                       |
      |                       ArrayList {aka struct ArrayList}
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:29: note: expected ‘size_t’ {aka ‘long unsigned int’} but argument is of type ‘ArrayList’ {aka ‘struct ArrayList’}
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |                      ~~~~~~~^~~~~~~
In file included from test.c:5:
arraylist.c:18:12: error: incompatible types when returning type ‘ArrayList’ {aka ‘struct ArrayList’} but ‘ArrayList *’ {aka ‘struct ArrayList *’} was expected
   18 |     return local;
      |            ^~~~~
arraylist.c:19:1: error: control reaches end of non-void function [-Werror=return-type]
   19 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
81cc436
